# iad-sieve

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: GOAL.md  README.md  annotation-requirements.md  artifact-organization-2026-06-17.md  current-work-summary.md  data-and-artifact-release.md  data-processing-pipeline.md  experiment-plan.md  experiment-results-2026-06-11.md  gpt-pro-idea-only-brief.md  gpt-pro-research-brief.md  iad-bench-contract.md  iad-sieve-codex-goal.md  method-design.md  naming-convention.md  paper-outline.md  patent-notes.md  prior-art-audit-2026-06-12.md  project-structure.md  public-release-checklist.md  remote-dev-setup.md  restructured-topic-plan.md  reviewer-literature-audit-2026-06-13.md  risk-calibrated-topic-restructure.md
manuscript/: MANIFEST.md  README.md  artifact_release_README.template.md  artifact_release_manifest.template.json  cover_letter.md  final_upload_information_request.md  highlights.md  keywords.md  main.tex  references.bib  reviewer_readiness_audit.md  submission_checklist.md  submission_metadata.yml  submission_quality_audit.md  submission_system_checklist.md  supplementary_material.tex  target_journal_shortlist.md
outputs/: README.md
scripts/: check_cuda.py  check_public_release.py  download_kaggle_arxiv.sh  run_100k_sharded_experiment.sh  run_dev_experiment.sh  run_main_experiment.sh
tests/: conftest.py  test_advanced_model_evidence_matrix.py  test_artifact_exporter.py  test_baseline_error_analysis.py  test_baseline_runner.py  test_bootstrap_confidence.py  test_build_artifact_release_skeleton.py  (+113 more)
(+192 files in other folders)
