[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iad-sieve"
version = "0.1.0"
description = "IAD-Sieve: risk-aware scientific entity matching under agenda-level confounders."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "pydantic>=2.7",
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "faiss-cpu>=1.8",
  "networkx>=3.2",
  "rapidfuzz>=3.9",
  "rank-bm25>=0.2.2",
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0"]
specter2 = ["adapters>=1.3,<2"]

[project.scripts]
iad-sieve = "iad_sieve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
